<resources>
    <string name="app_name">Dicoding Event App</string>
    <string name="ini_judul">Ini Judul</string>
    <string name="ini_waktu">Ini waktu</string>
    <string name="ini_deskripsi">ini deskripsi</string>
    <string name="register_sekarang">Register Sekarang</string>
    <string name="ini_summary">ini summary</string>
    <string name="ini_owner">ini owner</string>
    <string name="ini_registrants">ini registrants</string>
    <string name="ini_city">ini city</string>
    <string name="ini_category">ini category</string>
    <string name="remaining_quota">Kuota : %1$d dari %2$d</string>
    <string name="registrants_count">Peserta : %d</string>
    <string name="completed_events">Completed Events</string>
    <string name="home_events">Home Events</string>
    <string name="active_events">Active Events</string>
    <string name="dicoding_event">Dicoding Event</string>
    <string name="ini_banner">Ini Banner</string>
    <string name="favourite_events">Favourite Events</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="share">Share</string>
    <string name="no_favorite_yet">No Favorite Yet</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings">Settings</string>
    <string name="no_favorite_events_yet">No favorite events yet</string>
    <string name="favorite_events">Favorite Events</string>
    <string name="enable_dark_mode">Enable Dark mode</string>
    <string name="completed_nav_events">Completed</string>
    <string name="home_nav_events">Home</string>
    <string name="active_nav_events">Active</string>
    <string name="favourite_nav_events">Favourite</string>
</resources>