<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_active_events"
        android:title="@string/active_nav_events"
        android:icon="@drawable/ic_event_active" />

    <item
        android:id="@+id/nav_completed_events"
        android:title="@string/completed_nav_events"
        android:icon="@drawable/ic_event_completed" />

    <item
        android:id="@+id/nav_home_events"
        android:title="@string/home_nav_events"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/nav_favorite_events"
        android:title="@string/favourite_nav_events"
        android:icon="@drawable/ic_favourite"/>
    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"/>
</menu>
