<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorBackground">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_event_banner"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/ini_banner"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/favourite_events"
                android:backgroundTint="@color/coral_pink"
                app:srcCompat="@drawable/ic_favorite_border"
                app:tint="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@id/iv_event_banner"
                app:layout_constraintEnd_toEndOf="@id/iv_event_banner"
                android:layout_margin="6dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_event_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintTop_toBottomOf="@id/iv_event_banner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardBackgroundColor="?attr/colorCardBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tv_event_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="?attr/colorText"
                        android:layout_marginBottom="8dp"
                        android:text="@string/ini_judul" />

                    <TextView
                        android:id="@+id/tv_event_owner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:text="@string/ini_owner"
                        android:textStyle="bold"
                        android:textColor="?attr/colorText"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_event_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:text="@string/ini_city"
                        android:textStyle="bold"
                        android:textColor="?attr/colorText"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_event_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorText"
                        android:textSize="14sp"
                        android:drawablePadding="2dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/ini_waktu" />

                    <TextView
                        android:id="@+id/tv_event_quota"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorText"
                        android:textSize="14sp"
                        android:drawablePadding="8dp"
                        android:textStyle="bold"
                        android:text="@string/remaining_quota" />

                    <TextView
                        android:id="@+id/tv_event_registrants"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorText"
                        android:textSize="14sp"
                        android:drawablePadding="8dp"
                        android:textStyle="bold"
                        android:text="@string/ini_registrants" />

                    <TextView
                        android:id="@+id/tv_event_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ini_deskripsi"
                        android:textColor="?attr/colorText"
                        android:textSize="16sp"
                        android:layout_marginTop="16dp" />

                    <TextView
                        android:id="@+id/tv_event_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ini_category"
                        android:textColor="?attr/colorText"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="?attr/colorButtonBackground"
                android:text="@string/register_sekarang"
                android:textColor="?attr/colorButtonText"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_event_details" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_event_details"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/btn_register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:nestedScrollingEnabled="false" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        android:indeterminateTint="?attr/colorPrimary"/>

</FrameLayout>