<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?attr/colorBackground">

    <TextView
        android:id="@+id/tv_home_events_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dicoding_event"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?attr/colorText"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_active_events_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_events"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?attr/colorText"
        app:layout_constraintTop_toBottomOf="@id/tv_home_events_title"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_active_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:nestedScrollingEnabled="false" />

    <TextView
        android:id="@+id/tv_completed_events_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed_events"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?attr/colorText"
        android:layout_marginTop="20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_completed_events"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:nestedScrollingEnabled="false" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        android:indeterminateTint="?attr/colorPrimary"/>
</LinearLayout>
